--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -2,6 +2,7 @@
 @import "block/_promo"
 @import "block/_header"
 @import "block/_button"
+@import "block/_advantages"
 .container 
     max-width: 950px
     margin: 0 auto
