--- a/src/sass/block/_advantages.sass
+++ b/src/sass/block/_advantages.sass
@@ -9,7 +9,27 @@
         font-size: 30px
         font-weight: 700
         line-height: 30px
-    &__block
+    &__wrapper
         display: flex
+        justify-content: space-around
+        margin-top: 65px
+    &__block
+        text-align: center
         width: 275px
-        
+    &__subtitle
+        color: rgb(13, 13, 13)
+        font-family: 'MuseoSansCyrl-700'
+        font-size: 18px
+        font-weight: 700
+        line-height: 29px
+        margin-top: 30px
+    &__text
+        margin-top: 20px
+        color: rgb(13, 13, 13)
+        font-family: 'MuseoSansCyrl-300'
+        font-size: 14px
+        font-weight: 300
+        line-height: 18px
+        a
+            font-family: 'MuseoSansCyrl-500'
+            color: #FF0000
