--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -3,6 +3,7 @@
 @import "block/_header"
 @import "block/_button"
 @import "block/_advantages"
+@import "base/_media"
 .container 
     max-width: 950px
     margin: 0 auto
