add consultation and from

--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -4,6 +4,8 @@
 @import "block/_button"
 @import "block/_advantages"
 @import "base/_media"
+@import "block/_consultation"
+@import "block/_form"
 .container 
     max-width: 950px
     margin: 0 auto
