--- a/src/css/style.css
+++ b/src/css/style.css
@@ -143,6 +143,14 @@
   margin-top: 68px;
 }
 
+/* line 16, ../../../../../../../../../../../../../Users/nursultannurulla/Desktop/Pulsproject/src/sass/block/_button.sass */
+.button_submit {
+  width: 100%;
+  margin-top: 35px;
+  height: 58px;
+  font-size: 16px;
+}
+
 /* line 1, ../../../../../../../../../../../../../Users/nursultannurulla/Desktop/Pulsproject/src/sass/block/_advantages.sass */
 .advantages {
   min-height: 475px;
@@ -250,7 +258,60 @@
   }
 }
 
-/* line 7, ../../../../../../../../../../../../../Users/nursultannurulla/Desktop/Pulsproject/src/sass/style.sass */
+/* line 1, ../../../../../../../../../../../../../Users/nursultannurulla/Desktop/Pulsproject/src/sass/block/_consultation.sass */
+.consultation {
+  padding: 100px 0 108px 0;
+  min-height: 680px;
+  background: url(../img/bg/second_bg.png) center center/cover no-repeat;
+}
+
+/* line 5, ../../../../../../../../../../../../../Users/nursultannurulla/Desktop/Pulsproject/src/sass/block/_consultation.sass */
+.consultation__wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+/* line 9, ../../../../../../../../../../../../../Users/nursultannurulla/Desktop/Pulsproject/src/sass/block/_consultation.sass */
+.consultation__header {
+  color: white;
+  font-family: 'MuseoSansCyrl-700';
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 54px;
+  text-transform: uppercase;
+}
+
+/* line 16, ../../../../../../../../../../../../../Users/nursultannurulla/Desktop/Pulsproject/src/sass/block/_consultation.sass */
+.consultation__subheader {
+  color: white;
+  font-family: 'MuseoSansCyrl-300';
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 30px;
+}
+
+/* line 1, ../../../../../../../../../../../../../Users/nursultannurulla/Desktop/Pulsproject/src/sass/block/_form.sass */
+.feed-form {
+  display: flex;
+  flex-direction: column;
+  margin-top: 36px;
+}
+
+/* line 5, ../../../../../../../../../../../../../Users/nursultannurulla/Desktop/Pulsproject/src/sass/block/_form.sass */
+.feed-form__input {
+  width: 303px;
+  height: 54px;
+  border-radius: 5px;
+  border: none;
+  margin-top: 15px;
+  padding: 0 20px;
+  color: #4b4b4b;
+  font-family: 'MuseoSansCyrl-300';
+  font-size: 14px;
+}
+
+/* line 9, ../../../../../../../../../../../../../Users/nursultannurulla/Desktop/Pulsproject/src/sass/style.sass */
 .container {
   max-width: 950px;
   margin: 0 auto;
