--- a/src/sass/block/_button.sass
+++ b/src/sass/block/_button.sass
@@ -13,4 +13,8 @@
         height: 50px
         font-size: 16px
         margin-top: 68px
-        
+    &_submit
+        width: 100%
+        margin-top: 35px
+        height: 58px
+        font-size: 16px
