--- a/src/sass/base/_media.sass
+++ b/src/sass/base/_media.sass
@@ -1,3 +1,18 @@
+@media (max-width: 1200px)
+    .advantages
+@media (max-width: 991px)
+    .promo
+        &__wrapper
+            padding: 0 20px 0 0
+    .header
+        padding: 0 20px 0 20px
+        &__phone
+            font-size: 16px
+    .consultation
+        &__wrapper
+            padding: 0 0 0 20px
+@media (max-width: 767px)
+    .advantages
 @media (max-width: 575px)
     .advantages
         &__wrapper
@@ -16,6 +31,7 @@
     .promo
         &__wrapper
             align-items: center
+            padding: 0 
         &__icons
             width: 310px
             flex-direction: column
@@ -29,3 +45,18 @@
         &__subheader
             font-size: 20px
             text-align: center
+    .consultation
+        &__header
+            text-align: center
+            font-size: 33px
+        &__subheader
+            text-align: center
+        &__wrapper
+            align-items: center
+    .button
+        &_submit
+            width: 280px 
+    .feed-form
+        &__input
+            width: 280px
+
