add slick slide

--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -5,6 +5,7 @@
 @import "block/_advantages"
 @import "block/_consultation"
 @import "block/_form"
+@import "block/_carousel"
 @import "base/_media"
 .container 
     max-width: 950px
