--- a/src/sass/base/_media.sass
+++ b/src/sass/base/_media.sass
@@ -59,4 +59,10 @@
     .feed-form
         &__input
             width: 280px
+    .carousel
+        &__inner
+            width: 320px
+        div
+            img
+                width: 300px
 
