--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -6,6 +6,7 @@
 @import "block/_consultation"
 @import "block/_form"
 @import "block/_carousel"
+@import "block/_catalog"
 @import "base/_media"
 .container 
     max-width: 950px
