--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -7,6 +7,7 @@
 @import "block/_form"
 @import "block/_carousel"
 @import "block/_catalog"
+@import "block/_client"
 @import "base/_media"
 .container 
     max-width: 950px
